# jaxlip

./: .gitignore  LICENSE  README.md  pyproject.toml
jaxlip/: __init__.py  activations.py  batchop.py  bound.py  conv.py  linear.py  loss.py  newton_schulz.py  reparametrizer.py  trainer.py  utils.py
jaxlip/zbp/: assign.py  base.py  distributed_op.py  layout.py  pack.py
models/: __init__.py  convnet.py  mixer.py  simple.py
scripts/: __init__.py  cifar.py  imagenette.py
tests/: __init__.py  batchop.py  compute_reparametrizations.py  conv.py  linear.py  trainer.py
tests/multi-gpu/: conv.py  distributed_reparam.py  linear.py
utils/: __init__.py  utils.py
