[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxlip"
version = "0.1.0"
description = "Lipschitz Neural Networks in JAX with Flax NNX"
readme = "README.md"
authors = [{name = "JaxLip Contributors"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.8.0",
    "numpy>=1.21.0",
    "einops>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0",
]
examples = [
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/username/jaxlip"
Repository = "https://github.com/username/jaxlip"
Issues = "https://github.com/username/jaxlip/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxlip*"]

[tool.setuptools.package-dir]
jaxlip = "src"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true