[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxlip"
version = "0.1.0"
description = "Lipschitz Neural Networks in JAX with Flax NNX"
readme = "README.md"
authors = [{name = "Thomas Massena"}]
license = "MIT"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.8.0",
    "numpy>=1.21.0",
    "einops>=0.6.0",
    "optax>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0",
]
examples = [
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
]

[tool.setuptools]
packages = { find = { where = ["."] , include = ["jaxlip*"] } }

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

